<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:fillViewport="true"
    tools:context="com.example.android.cricketscorer.MainActivity"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/innerParent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:baselineAligned="false"
            android:id="@+id/battingIndicatorArea"
            android:gravity="center_horizontal"
        >
            <TextView
                android:id="@+id/battingTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/Ttoggle"
                android:paddingTop="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
            />

            <Switch
                android:id="@+id/on_off_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_marginBottom="20dp"
                android:switchTextAppearance="@color/colorAccent"
                android:textColor="@color/switchColer"
                android:textOff="@string/teama"
                android:textOn="@string/teamb"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="visible"
                android:onClick="ChangeTeamBatting"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:baselineAligned="false"
            android:id="@+id/teamScoreArea"
            android:gravity="center_horizontal"
        >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/teamA"
            >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/darker_gray"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teama"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/teamNameColor"
                    android:padding="5dp"
                    android:gravity="center"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:paddingLeft="15dp"
                        android:paddingRight="1dp"
                        android:paddingStart="15dp"
                        android:paddingBottom="1dp"
                        android:paddingEnd="1dp"
                        android:paddingTop="1dp"
                        android:textSize="56sp"
                        android:textColor="@color/scoreColor"
                        android:id="@+id/team_a_score"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fslash"
                        android:padding="0dp"
                        android:textSize="57sp"
                        android:textColor="@color/scoreColor"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wickets"
                        android:paddingLeft="1dp"
                        android:paddingEnd="15dp"
                        android:paddingStart="1dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="1dp"
                        android:paddingTop="1dp"
                        android:textSize="36sp"
                        android:textColor="@color/scoreColor"
                        android:id="@+id/team_a_wicket"
                    />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray"
                />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:background="@android:color/darker_gray"
            />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/teamB"
            >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/darker_gray"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teamb"
                    android:layout_marginTop="1dp"
                    android:textSize="20sp"
                    android:textColor="@color/teamNameColor"
                    android:padding="5dp"
                    android:gravity="center"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        android:paddingRight="1dp"
                        android:paddingEnd="1dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="1dp"
                        android:textSize="56sp"
                        android:textColor="@color/scoreColor"
                        android:id="@+id/team_b_score"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fslash"
                        android:padding="0dp"
                        android:textSize="57sp"
                        android:textColor="@color/scoreColor"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wickets"
                        android:paddingLeft="1dp"
                        android:paddingStart="1dp"
                        android:paddingRight="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="1dp"
                        android:textSize="36sp"
                        android:textColor="@color/scoreColor"
                        android:id="@+id/team_b_wicket"
                    />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
                <Button
                    android:id="@+id/six_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="sixHit"
                    android:textColor="@color/BorderlessButtonTextColor"
                    android:text="@string/six_runs"
                />

                <Button
                    android:id="@+id/four_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="fourHit"
                    android:textColor="@color/BorderlessButtonTextColor"
                    android:text="@string/four_runs"
                />

                <Button
                    android:id="@+id/three_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="threeSingles"
                    android:text="@string/three_runs"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
                <Button
                    android:id="@+id/two_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="twoSingles"
                    android:text="@string/two_runs"
                />

                <Button
                    android:id="@+id/one_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addARun"
                    android:text="@string/one_run"
                />

                <Button
                    android:id="@+id/extra_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addARun"
                    android:text="@string/extra"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
        >
            <Button
                android:id="@+id/wicket_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wicket_btn"
                android:onClick="wicket"
                android:textColor="@color/redButtonTextColor"
                style="?android:attr/button"
            />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/reset_btn"
                android:onClick="resetAll"
                android:textColor="@color/redButtonTextColor"
                style="?android:attr/button"
            />

            <Button
                android:id="@+id/gameOver_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gOver_btn"
                android:onClick="gameOver"
                android:textColor="@color/redButtonTextColor"
                style="?android:attr/button"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>